gforge (4.6.99+svn6368+something-0) UNRELEASED; urgency=low

  * Tracking upstream SVN.
  * Fixed dependency on mediawiki.
  * Bumped Standards-Version to 3.7.3 (no changes needed).
  * Removed .cvsignore files from packages.
  * Cleaned up empty directories in binary packages.
  * Rephrased debian/copyright file.
  * Removed useless gforge-ftp-proftpd.templates and
    gforge-shell-postgresql.config.
  * Various fixes in debconf files, inspired by a lintian check.
  * Removed lintian overrides, no longer needed.
  * Updated to PostgreSQL 8.3.

 -- Roland Mas <lolando@debian.org>  Tue, 26 Feb 2008 23:03:25 +0100

gforge (4.6.99+svn6368-1) unstable; urgency=low

  * New SVN snapshot.
  * New binary package: gforge-plugin-mediawiki, to embed Mediawiki in
    Gforge (in an iframe, on a new optional project tab).  The related
    files have been removed from gforge-plugin-extras.

 -- Roland Mas <lolando@debian.org>  Mon, 25 Feb 2008 20:13:21 +0100

gforge (4.6.99+svn6347-1) unstable; urgency=high

  * New SVN snapshot, including a fix for a cross-site scripting
    vulnerability (CVE-2007-0176).
  * Fixed typos in debian/control.

 -- Roland Mas <lolando@debian.org>  Mon, 21 Jan 2008 14:57:32 +0100

gforge (4.6.99+svn6330-1) unstable; urgency=high

  * Finished removing all references to LDAP from the Debconf templates
    and maintainer scripts (closes: #408867).
  * Also updated German debconf template translation (closes: #456504).
  * Fixed SQL injection vulnerability due to insufficient input sanitizing
    (CVE-2008-0173).

 -- Roland Mas <lolando@debian.org>  Thu, 10 Jan 2008 13:59:45 +0100

gforge (4.6.99+svn6319-3) unstable; urgency=low

  * gforge-mta-postfix.config: don't try to replace files unless their
    replacements have been generated.

 -- Roland Mas <lolando@debian.org>  Fri, 14 Dec 2007 17:20:11 +0100

gforge (4.6.99+svn6319-2) unstable; urgency=low

  * Fixed dependencies to add at least one real package before virtual
    ones. 
