@@ -3,4 +3,4 @@ etc/mediawiki-extensions/extensions-available
 usr/share/gforge/plugins/mediawiki/common
 usr/share/gforge/www/plugins/mediawiki
 usr/share/gforge/etc/httpd.d
-usr/share/mediawiki1.10/skins
+usr/share/mediawiki/skins
