@@ -1,7 +1,8 @@
 gforge (4.6.99+svn6368+something-0) UNRELEASED; urgency=low
 
   * Tracking upstream SVN.
-  * Fixed dependency on mediawiki.
+  * Adapted to mediawiki packaging no longer being in mediawiki1.X package
+    and directory names.
   * Bumped Standards-Version to 3.7.3 (no changes needed).
   * Removed .cvsignore files from packages.
   * Cleaned up empty directories in binary packages.
@@ -12,7 +13,7 @@ gforge (4.6.99+svn6368+something-0) UNRELEASED; urgency=low
   * Removed lintian overrides, no longer needed.
   * Updated to PostgreSQL 8.3.
 
- -- Roland Mas <lolando@debian.org>  Tue, 26 Feb 2008 23:03:25 +0100
+ -- Roland Mas <lolando@debian.org>  Wed, 27 Feb 2008 00:21:48 +0100
 
 gforge (4.6.99+svn6368-1) unstable; urgency=low
 
